# lean-coder-self-training-LLM

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION-SUMMARY.md  PROJECT-DETAIL.md  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
config/: base.yaml  data.yaml  eval.yaml
config/train/: distributed.yaml  qlora.yaml
data/eval/: problems.json
data/train/: ds-v1_train.jsonl
data/val/: ds-v1_val.jsonl
docs/superpowers/specs/: 2026-06-02-phase0-setup-design.md
notebooks/: 01_baseline.ipynb  02_finetune.ipynb  03_eval.ipynb
scripts/: validate_pipeline.py
src/: main.py
src/base/: __init__.py  fetch.py
src/compress/: __init__.py  compress.py  prune.py  quantize.py
src/config/: __init__.py
src/data/: __init__.py  augmentation.py  build.py  builder.py  cleaners.py  dedup.py  formatter.py  pipeline.py
src/eval/: __init__.py  ab_testing.py  baseline.py  harness.py  reporter.py  sandbox.py
src/eval/benchmarks/: __init__.py  benchmark_suite.py  human_eval.py  leetcode.py  mbpp.py
src/knowledge/: __init__.py  brain.py  loop.py  processor.py
src/models/: __init__.py
src/pipeline/: async.py
src/plugins/: __init__.py
src/registry/: __init__.py  manager.py  promotion.py
src/serve/: __init__.py  api.py  ensemble.py  run_server.py  server.py
src/serve/dashboard/: __init__.py  app.py  metrics.py  registry.py
src/train/: __init__.py  distributed.py  dpo.py  optuna.py  qlora.py  resumable.py  sft.py  sft_trainer.py
tests/: __init__.py  test_config.py  test_eval.py  test_registry.py
